# elemental-gui

./: .clang-format  .editorconfig  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  art_file
.claude/skills/new-element/: SKILL.md
.claude/skills/new-element-workspace/iteration-1/eval-1-progressbar/: eval_metadata.json
.claude/skills/new-element-workspace/iteration-1/eval-1-progressbar/with_skill/outputs/: ProgressBar.cpp  ProgressBar.h  declarative_addition.txt  style_addition.json
.claude/skills/new-element-workspace/iteration-1/eval-1-progressbar/without_skill/outputs/: ProgressBar.cpp  ProgressBar.h  declarative_addition.txt
.claude/skills/new-element-workspace/iteration-1/eval-2-toggleswitch/: eval_metadata.json
.claude/skills/new-element-workspace/iteration-1/eval-2-toggleswitch/with_skill/outputs/: ToggleSwitch.cpp  ToggleSwitch.h  declarative_addition.txt  style_addition.json
.claude/skills/new-element-workspace/iteration-1/eval-2-toggleswitch/without_skill/outputs/: ToggleSwitch.cpp  ToggleSwitch.h  declarative_addition.txt  style_addition.json
.claude/skills/new-element-workspace/iteration-1/eval-3-knob/: eval_metadata.json
.windsurf/: settings.json
cmake/: FindCairo.cmake  embed_resources.cmake
examples/: CMakeLists.txt
examples/assets/: LightStyle.json  teddy.art
examples/custom-backend/: CMakeLists.txt  main.cpp  smol_frame.h
examples/drawing-pad/: CMakeLists.txt  main.cpp
examples/elements/: CMakeLists.txt  main.cpp
examples/node-editor/: CMakeLists.txt  main.cpp
examples/pixel-paint/: CMakeLists.txt  Canvas.cpp  Canvas.h  MainWindow.cpp  MainWindow.h  main.cpp  portable-file-dialogs.h
include/elemental/: Application.h  Backend.h  Button.h  Container.h  DataBinding.h  Declarative.h  Edit.h  Element.h  EventSystem.h  FlexLayout.h  Graphics.h  ImageView.h  InputFilter.h  LineEdit.h  List.h  NodeGraph.h  ProgressBar.h  ScrollView.h  Slider.h  Spinner.h  SplitView.h  Switch.h  TextArea.h  TextInputController.h  TextProcessing.h  Timer.h  ToolButton.h  Utils.h  elemental.h
include/elemental/backends/sdl3/: SDL3Backend.h
resources/: DefaultStyle.json  NeumorphismDark.json
src/: Application.cpp  Application.h  Backend.h  Button.cpp  Button.h  CheckBox.cpp  CheckBox.h  ColorPicker.cpp  ColorPicker.h  Container.cpp  Container.h  DataBinding.cpp  DataBinding.h  Declarative.cpp  Declarative.h  Edit.cpp  Edit.h  Element.cpp  Element.h  EventSystem.cpp  EventSystem.h  FlexLayout.cpp  FlexLayout.h  Graphics.cpp  Graphics.h  Image.cpp  Image.h  ImageView.cpp  ImageView.h  Label.cpp  Label.h  Layout.cpp  Layout.h  LineEdit.cpp  LineEdit.h  List.cpp  List.h  Menu.cpp  Menu.h  MenuItem.cpp  (+38 more)
src/backends/sdl3/: SDL3Backend.cpp  SDL3Backend.h
src/tui/: Application.cpp  Application.h  Backend.h  Button.cpp  Button.h  CheckBox.cpp  CheckBox.h  Container.cpp  Container.h  Declarative.cpp  Declarative.h  DefaultStyle.h  Edit.cpp  Edit.h  Element.cpp  Element.h  EventSystem.cpp  EventSystem.h  FlexLayout.cpp  FlexLayout.h  GLView.cpp  GLView.h  Graphics.cpp  Graphics.h  Image.cpp  Image.h  ImageView.cpp  ImageView.h  Label.cpp  Label.h  Layout.cpp  Layout.h  List.cpp  List.h  Menu.cpp  Menu.h  MenuItem.cpp  MenuItem.h  Panel.cpp  Panel.h  (+26 more)
