set(CPM_DOWNLOAD_LOCATION "${CMAKE_SOURCE_DIR}/cmake/CPM.cmake")
if(NOT EXISTS ${CPM_DOWNLOAD_LOCATION})
    message(ERROR "CPM.cmake not found at ${CPM_DOWNLOAD_LOCATION}. Please run the top-level CMakeLists.txt to download it.")
endif()
include(${CPM_DOWNLOAD_LOCATION})

add_subdirectory(custom-backend)
add_subdirectory(drawing-pad)
add_subdirectory(elements)
add_subdirectory(pixel-paint)
add_subdirectory(node-editor)